--- a/myth.html
+++ b/myth.html
@@ -6,13 +6,13 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="style.css" rel="stylesheet" type="text/css">
-	<title>Coma Berenices</title>
+	<title>Scorpius</title>
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		<div class="container-fluid">
 			<a class="navbar-brand" href="/coma-berenices-myth
-/">Coma Berenices</a>
+/">Scorpius</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -35,8 +35,8 @@
 	</div>
 </nav>
 <main>
-<h1>Coma Berenices - Constellation - Myth</h1>
-<p>In Latin, <i>Coma Berenices</i> translates to <i>Berenice's Hair</i>. In myths, Queen Berenices is associated with <a href="https://en.wikipedia.org/wiki/Berenice_II_of_Egypt" target="_blank">Queen Berenices II Of Egypt</a>.</p>
+<h1>Scorpius - Constellation - Myth</h1>
+<p>In Latin, <i>Scorpius</i> translates to <i>Berenice's Hair</i>. In myths, Queen Berenices is associated with <a href="https://en.wikipedia.org/wiki/Berenice_II_of_Egypt" target="_blank">Queen Berenices II Of Egypt</a>.</p>
 <p>Queen Berenices was married to <a href="https://en.wikipedia.org/wiki/Ptolemy_III_Euergetes" target="_blank">Ptolemy III Euergetes</a>, and the myth takes place in Egypt where she resided and ruled.</p>
 <p>Queen Berenices was concerned when her husband went to war so she cut her hair as a sacrifice to Venus so he could be spared. When her husband eventually returned from war, she kept her promise and cuts her hair. Zeus placed her hair among the heavens to shine along the stars because he thought it was beautiful.</p>
 <p>This is the only myth available, as the constellation itself is named after Queen Berenices.</p>
