--- a/my-myth.html
+++ b/my-myth.html
@@ -6,13 +6,13 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="style.css" rel="stylesheet" type="text/css">
-	<title>Coma Berenices</title>
+	<title>Scorpius</title>
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		<div class="container-fluid">
 			<a class="navbar-brand" href="/coma-berenices-myth
-/">Coma Berenices</a>
+/">Scorpius</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -35,7 +35,7 @@ myth.html">Myth</a>
 	</div>
 </nav>
 <main>
-<h1>Coma Berenices - Constellation - My Myth</h1>
+<h1>Scorpius - Constellation - My Myth</h1>
 <p>Because the constellation isn't really shaped like anything, I sort of had a hard time thinking of a myth on my own.</p>
 <p>Long long ago, there was a mathematician that was studying angles. However, he couldn’t solve a math problem so he threw a triangle away into the garbage. However, Lord Chungus K. Monkey II loved math so he put the triangle in the sky to honor it.</p>
 </main>
