--- a/myth.html
+++ b/myth.html
@@ -11,7 +11,7 @@
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="/coma-berenices-myth
+			<a class="navbar-brand" href="/scorpius-myth
 /">Scorpius</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -19,16 +19,13 @@
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 				<li class="nav-item">
-					<a class="nav-link" href="/coma-berenices-myth
-/">Home</a>
+					<a class="nav-link" href="/scorpius/">Home</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="/coma-berenices-myth
-/myth.html">Myth</a>
+					<a class="nav-link" href="/scorpius/myth.html">Myth</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="/coma-berenices-myth
-/my-myth.html">My Myth</a>
+					<a class="nav-link" href="/scorpius/my-myth.html">My Myth</a>
 				</li>
 			</ul>
 		</div>
@@ -44,7 +41,7 @@
 <h2>Sources:</h2>
 <ul>
 	<li><a href="https://www.heavens-above.com/myth.aspx?con=com&lat=0&lng=0&loc=Unspecified&alt=0&tz=UCT&cul=en" target="_blank">Heavens Above</a></li>
-	<li><a href="https://www.constellation-guide.com/constellation-list/coma-berenices-constellation/" target="_blank">Constellation Guide</a></li>
+	<li><a href="https://www.constellation-guide.com/constellation-list/scorpius-constellation/" target="_blank">Constellation Guide</a></li>
 </ul>
 </main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
