--- a/my-myth.html
+++ b/my-myth.html
@@ -11,24 +11,20 @@
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="/coma-berenices-myth
-/">Scorpius</a>
+			<a class="navbar-brand" href="/scorpius/">Scorpius</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 				<li class="nav-item">
-					<a class="nav-link" href="/coma-berenices-myth
-/">Home</a>
+					<a class="nav-link" href="/scorpius/">Home</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="/coma-berenices-myth/
-myth.html">Myth</a>
+					<a class="nav-link" href="/scorpius/myth.html">Myth</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="/coma-berenices-myth
-/my-myth.html">My Myth</a>
+					<a class="nav-link" href="/scorpius/my-myth.html">My Myth</a>
 				</li>
 			</ul>
 		</div>
