--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 </nav>
 <main>
 <h1>Scorpius - Constellation</h1>
+<img src="scorpius.png" alt="Scorpius">
 </main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
