--- a/myth.html
+++ b/myth.html
@@ -32,14 +32,12 @@
 </nav>
 <main>
 <h1>Scorpius - Constellation - Myth</h1>
-<p>In Latin, <i>Scorpius</i> translates to <i>Berenice's Hair</i>. In myths, Queen Berenices is associated with <a href="https://en.wikipedia.org/wiki/Berenice_II_of_Egypt" target="_blank">Queen Berenices II Of Egypt</a>.</p>
-<p>Queen Berenices was married to <a href="https://en.wikipedia.org/wiki/Ptolemy_III_Euergetes" target="_blank">Ptolemy III Euergetes</a>, and the myth takes place in Egypt where she resided and ruled.</p>
-<p>Queen Berenices was concerned when her husband went to war so she cut her hair as a sacrifice to Venus so he could be spared. When her husband eventually returned from war, she kept her promise and cuts her hair. Zeus placed her hair among the heavens to shine along the stars because he thought it was beautiful.</p>
-<p>This is the only myth available, as the constellation itself is named after Queen Berenices.</p>
+<h2>Myth 1:</h2>
+<p>Scorpius and Orion are connected in Greek mythology and one of the myths involves both of them. According to one myth, Orion said that he would kill every animal on the earth to prove his strength. The goddess-hunter Artemis and her mother, Leto, sent a scorpion to kill Orion to prevent him from killing the animals. Zeus put the scorpion in the heavens after it won the battle in order to honor it.</p>
 <br>
 <h2>Sources:</h2>
 <ul>
-	<li><a href="https://www.heavens-above.com/myth.aspx?con=com&lat=0&lng=0&loc=Unspecified&alt=0&tz=UCT&cul=en" target="_blank">Heavens Above</a></li>
+	<li><a href="https://www.space.com/16947-scorpius-constellation.html" target="_blank">Space.com</a></li>
 	<li><a href="https://www.constellation-guide.com/constellation-list/scorpius-constellation/" target="_blank">Constellation Guide</a></li>
 </ul>
 </main>
