other myth + source

--- a/myth.html
+++ b/myth.html
@@ -34,11 +34,13 @@
 <h1>Scorpius - Constellation - Myth</h1>
 <h2>Myth 1:</h2>
 <p>Scorpius and Orion are connected in Greek mythology and one of the myths involves both of them. According to one myth, Orion said that he would kill every animal on the earth to prove his strength. The goddess-hunter Artemis and her mother, Leto, sent a scorpion to kill Orion to prevent him from killing the animals. Zeus put the scorpion in the heavens after it won the battle in order to honor it.</p>
+<h2>Myth 2:</h2>
+<p>In another myth, it was Gaia who sent the scorpion to kill Orion, as she was the Godess of the Earth. In that myth, Scorpius stung and killed Orion with his stinger.</p>
 <br>
 <h2>Sources:</h2>
 <ul>
 	<li><a href="https://www.space.com/16947-scorpius-constellation.html" target="_blank">Space.com</a></li>
-	<li><a href="https://www.constellation-guide.com/constellation-list/scorpius-constellation/" target="_blank">Constellation Guide</a></li>
+	<li><a href="https://www.globeatnight.org/mythology/scorpius" target="_blank">Globe at Night</a></li>
 </ul>
 </main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
