--- a/my-myth.html
+++ b/my-myth.html
@@ -32,6 +32,7 @@
 </nav>
 <main>
 <h1>Scorpius - Constellation - My Myth</h1>
+<p>I made this myth since the Scorpius constellation looks like a flower.</p>
 </main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
