--- a/my-myth.html
+++ b/my-myth.html
@@ -34,7 +34,7 @@
 <h1>Scorpius - Constellation - My Myth</h1>
 <p>I made this myth since the Scorpius constellation looks like a flower.</p>
 <p>A long time ago, humans were still not created. Gods ruled the Earth and Goddesses ruled alongside the Gods. One Goddess, Gaia, of the Earth, brought beauty to the Earth. She cared for all of the animals and plants on the Earth, and she owned a monstrous Daisy flower which flourished all year around. It was white, and glowed yellow at night. The daisy was very precious, being Gaia's most loved plant.</p>
-<p>One day, however, </p>
+<p>One day, however, in my myth, Orion not only set out to kill animals, but also all plants. He killed all of the animals and plants on Earth, greatly angering and saddening Gaia, but when Orion set out for her Daisy, she </p>
 
 </main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
