--- a/my-myth.html
+++ b/my-myth.html
@@ -26,6 +26,9 @@
 				<li class="nav-item">
 					<a class="nav-link" href="/scorpius/my-myth.html">My Myth</a>
 				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="/scorpius/in-the-sky.html">In The Sky</a>
+				</li>
 			</ul>
 		</div>
 	</div>
