--- a/in-the-sky.html
+++ b/in-the-sky.html
@@ -35,7 +35,7 @@
 </nav>
 <main>
 <h1>In The Sky</h1>
-<p>What the Scorpius constellation looks like in the night sky.</p>
+<p>What the Scorpius constellation looks like in the night sky through the four seasons.</p>
 </main><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
