--- a/my-myth.html
+++ b/my-myth.html
@@ -38,7 +38,7 @@
 <p>I made this myth since the Scorpius constellation looks like a flower.</p>
 <p>A long time ago, humans were still not created. Gods ruled the Earth and Goddesses ruled alongside the Gods. One Goddess, Gaia, of the Earth, brought beauty to the Earth. She cared for all of the animals and plants on the Earth, and she owned a monstrous Daisy flower which flourished all year around. It was white, and glowed yellow at night. The daisy was very precious, being Gaia's most loved plant.</p>
 <p>One day, however, in my myth, Orion not only set out to kill animals, but also all plants. He killed all of the animals and plants on Earth, greatly angering and saddening Gaia, but when Orion set out for her Daisy, she needed to protect it. However, Orion was very strong, and was able to kill the Daisy, completing his quest in killing all plants and animals on Earth.</p>
-<p>Zeus, however, put the flower in the sky as a constellation, honoring Gaia for her deep love for the animals and plants on Earth. Over the folowwing years, the gods were able to kill Orion and reverse the effects of his quest.</p>
+<p>Zeus, however, placed the flower in the sky as a constellation, honoring Gaia for her deep love for the animals and plants on Earth. Over the folowwing years, the gods were able to kill Orion and reverse the effects of his quest.</p>
 <img src="daisy.png" alt="Image of A Daisy">
 <br><br><br>
 <p>WikiPedia page for <a href="https://en.wikipedia.org/wiki/Gaia" target="_blank">Gaia, The Goddess Of The Earth</a></p>
